@@ -1,15 +1,21 @@
 import mediatypes
 from base import ProviderError
 
+from artfiles import ArtFilesSeriesProvider, ArtFilesMovieProvider, ArtFilesEpisodeProvider
 from fanarttv import FanartTVSeriesProvider, FanartTVMovieProvider
+from nfofile import NFOFileSeriesProvider, NFOFileMovieProvider, NFOFileEpisodeProvider
 from themoviedb import TheMovieDBProvider, TheMovieDBEpisodeProvider
 from thetvdbv2 import TheTVDBProvider
 
-_providers = {
+external = {
     mediatypes.TVSHOW: (TheTVDBProvider(), FanartTVSeriesProvider()),
     mediatypes.MOVIE: (TheMovieDBProvider(), FanartTVMovieProvider()),
     mediatypes.EPISODE: (TheMovieDBEpisodeProvider(),)
 }
 
-def get_providers():
-    return _providers
+forced = {
+    mediatypes.TVSHOW: (NFOFileSeriesProvider(), ArtFilesSeriesProvider()),
+    mediatypes.MOVIE: (NFOFileMovieProvider(), ArtFilesMovieProvider()),
+    mediatypes.EPISODE: (NFOFileEpisodeProvider(), ArtFilesEpisodeProvider())
+}
+
