@@ -1,4 +1,5 @@
 v0.4.1~dev
+- Add artwork from NFO and image files
 - Add option to prefer fanart with no title
 - Multiple characterart can be selected
 - Better error handling for web services
